--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-sclae=1">
 		<title>서울사진학원</title>
 		<script src="js/jquery-1.12.3.js"></script>
 		<script src="js/seoul.js"></script>
